[gd_scene load_steps=6 format=2]

[ext_resource path="res://widgets/TextureWidget.tscn" type="PackedScene" id=1]
[ext_resource path="res://widgets/AnimationWidget.tscn" type="PackedScene" id=2]
[ext_resource path="res://tools/SelectionTool.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI.gd" type="Script" id=4]
[ext_resource path="res://tools/DuplicateTool.tscn" type="PackedScene" id=5]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureWidget" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 398.0

[node name="AnimationWidget" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_right = 442.0

[node name="SelectionTool" parent="." instance=ExtResource( 3 )]
anchor_top = 0.899
anchor_right = 0.0
anchor_bottom = 0.899
margin_left = 322.0
margin_top = -70.3999
margin_right = 441.0
margin_bottom = 55.6

[node name="DuplicateTool" parent="." instance=ExtResource( 5 )]

[connection signal="frame_changed" from="TextureWidget" to="." method="_on_TextureWidget_frame_changed"]
